@@ -8,6 +8,7 @@
 - Add reload parameter for security init/cleanup functions.
 - Add mosquitto_want_write() for use when using own select() loop with
   mosquitto_socket().
+- Add mosquitto_connect_async() to provide a non-blocking connect client call.
 - Fix reloading of log configuration.
 - Add option for expiring disconnected persistent clients.
 - Add option for queueing of QoS 0 messages when persistent clients are
